--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -47,7 +47,7 @@ jobs:
           uses: docker/build-push-action@v2 
           with:
             push: true
-            tags: kgdpete/api_yamdb:latest
+            tags: ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
 
   deploy:
       runs-on: ubuntu-latest
@@ -61,9 +61,11 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            sudo docker pull kgdpete/api_yamdb
-            sudo docker stop $(sudo docker ps -a -q)
-            sudo docker run --rm -d -p 5000:5000 kgdpete/api_yamdb
+            sudo docker-compose stop
+            sudo docker-compose rm web
+            touch .env
+            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
