--- a/api_yamdb/requirements.txt
+++ b/api_yamdb/requirements.txt
@@ -12,7 +12,7 @@ django-import-export==3.0.2
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.2.2
 et-xmlfile==1.1.0
-flake8==5.0.4
+flake8
 gunicorn==20.0.4
 idna==3.4
 importlib-metadata==4.2.0
