--- a/api_yamdb/requirements.txt
+++ b/api_yamdb/requirements.txt
@@ -6,13 +6,13 @@ charset-normalizer==2.0.12
 colorama==0.4.6
 defusedxml==0.7.1
 diff-match-patch==20200713
-Django==3.2
+Django==2.2.20
 django-filter==22.1
 django-import-export==3.0.2
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.2.2
 et-xmlfile==1.1.0
-flake8
+flake8==5.0.4
 gunicorn==20.0.4
 idna==3.4
 importlib-metadata==4.2.0
@@ -23,22 +23,24 @@ odfpy==1.4.1
 openpyxl==3.0.10
 packaging==22.0
 pluggy==0.13.1
-psycopg2-binary==2.8.6
+psycopg2-binary==2.9.5
 py==1.11.0
 pycodestyle==2.9.1
 pyflakes==2.5.0
 PyJWT==2.1.0
+pyparsing==3.0.9
 pytest==6.2.4
 pytest-django==4.4.0
 pytest-pythonpath==0.7.3
 python-dotenv==0.21.0
-pytz==2022.6
+pytz==2021.1
 PyYAML==6.0
 requests==2.26.0
-sqlparse==0.4.3
+sqlparse==0.4.1
 tablib==3.3.0
 toml==0.10.2
-typing-extensions==4.4.0
+tomli==2.0.1
+typing_extensions==4.4.0
 urllib3==1.26.13
 xlrd==2.0.1
 xlwt==1.3.0
