--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -32,8 +32,10 @@ jobs:
     needs: tests
     steps:
     - name: Check out the repo
-      uses: actions/checkout@v2 
+      uses: actions/checkout@v2
     - name: Set up Docker Buildx
+      run: |
+        cd api_yamdb
       uses: docker/setup-buildx-action@v1 
     - name: Login to Docker 
       uses: docker/login-action@v1
