--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -34,9 +34,9 @@ jobs:
     - name: Check out the repo
       uses: actions/checkout@v2
     - name: Set up Docker Buildx
-      run: |
-        cd api_yamdb
       uses: docker/setup-buildx-action@v1 
+      with:
+        context: ./api_yamdb
     - name: Login to Docker 
       uses: docker/login-action@v1
       with:
