--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1 
       with:
-        context: ./api_yamdb
+        context: "{{ defaultContext }}:api_yamdb"
     - name: Login to Docker 
       uses: docker/login-action@v1
       with:
