--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -33,10 +33,11 @@ jobs:
     steps:
     - name: Check out the repo
       uses: actions/checkout@v2
+    - name: Change dir to api_yamdb
+      run: |
+        cd api_yamdb
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1 
-      with:
-        context: "{{ defaultContext }}:api_yamdb"
     - name: Login to Docker 
       uses: docker/login-action@v1
       with:
