--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -32,11 +32,12 @@ jobs:
     needs: tests
     steps:
     - name: Check out the repo
-      uses: actions/checkout@v2 
+      uses: actions/checkout@v2
+    - name: Change dir to api_yamdb
+      run: |
+        cd api_yamdb
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-      with:
-        context: ./api_yamdb
+      uses: docker/setup-buildx-action@v1 
     - name: Login to Docker 
       uses: docker/login-action@v1
       with:
@@ -44,8 +45,9 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
     - name: Push to Docker Hub
       uses: docker/build-push-action@v2 
-      with:        
+      with:
         push: true
+        context: ./api_yamdb/
         tags: ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
 
   deploy:
