--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -18,11 +18,11 @@ jobs:
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
         pip install -r ./api_yamdb/requirements.txt 
 
-    - name: Test with Flake8
+    - name: Test (flake8)
       run: |
         python -m flake8
 
-    - name: Test using pytest
+    - name: Test (pytest)
       run: |
         pytest
     
