--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -18,7 +18,7 @@ jobs:
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
         pip install -r ./api_yamdb/requirements.txt 
 
-    - name: Test (flake8)
+    - name: Test (Flake8)
       run: |
         python -m flake8
 
