--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -52,6 +52,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
     needs: build_and_push_to_docker_hub
     steps:
     - name: executing remote ssh commands to deploy
@@ -72,6 +73,7 @@ jobs:
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
           sudo docker-compose up -d
+          sudo docker image prune
 
   send_message:
     runs-on: ubuntu-latest
